Adding support for jakarta.servlet

--- a/http-request-entity-decoder/pom.xml
+++ b/http-request-entity-decoder/pom.xml
@@ -30,6 +30,21 @@ You should have received a copy of the GNU Lesser General Public License along w
     </licenses>
     <dependencies>
         <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+            <version>${V.jakarta.servlet}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!--Deprecated-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${V.javax.servlet}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.braintribe.gm</groupId>
             <artifactId>gm-core</artifactId>
             <version>${V.com.braintribe.gm}</version>
@@ -38,12 +53,6 @@ You should have received a copy of the GNU Lesser General Public License along w
             <groupId>com.braintribe.common</groupId>
             <artifactId>platform-api</artifactId>
             <version>${V.com.braintribe.common}</version>
-        </dependency>
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <scope>provided</scope>
-            <version>${V.javax.servlet}</version>
         </dependency>
     </dependencies>
 </project>
